[GREEN] Increase RENTAL Jacoco coverage test to 100%